[package]
name = "rtsp-rtp-rs"
version = "0.1.33"
edition = "2021"
authors = ["Gary Suyemoto <me@garysuyemoto.com>"]
description = "ONVIF IP camera messaging protocol"
repository = "https://github.com/gsuyemoto/onvif-client-rs"
documentation = "https://docs.rs/onvif-cam-rs"
license = "MIT"

[dependencies]
anyhow = "1"
openh264 = "0.4.2"
url = "2.4.0"
log = "0.4.20"

[dependencies.tokio]
version = "1"
features = ["full"]
