[package]
name = "rtsp-rtp-rs"
version = "0.1.35"
edition = "2021"
authors = ["Gary Suyemoto <me@garysuyemoto.com>"]
description = "RTSP and RTP protocols and OpenH264 decoding for video streaming"
repository = "https://github.com/gsuyemoto/rtsp-rtp-rs"
documentation = "https://docs.rs/rtsp-rtp-rs"
license = "MIT"

[dependencies]
anyhow = "1"
openh264 = "0.4.2"
url = "2.4.0"
log = "0.4.20"

[dependencies.tokio]
version = "1"
features = ["full"]
